fix header cutoff

--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
-html, body {
-    margin: 0px;
-    height: 100%;
-}
-
 body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
     margin: 0;
+    
+    min-height: 0;
+    min-width: 0;
 
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -69,13 +68,13 @@ a {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 3em;
+
 }
 
 .text-window {
     display: flex;
     flex-direction: column;
-    gap: 0.7em;
+
     width: 450px;
     
 }
@@ -144,7 +143,7 @@ a {
 .quote-box {
     display: flex;
     background: #E5E7EB;
-    padding: 3em;
+
 }
 
 .quote {
@@ -159,6 +158,5 @@ a {
     background: #3882F6;
     width: 480px;
     border-radius: 10px;
-    margin: 2em;
-    padding: 3em;
+
 }
